--- a/QMidiAn1x.vcxproj
+++ b/QMidiAn1x.vcxproj
@@ -108,6 +108,8 @@
     <ClCompile Include="src\View\ArpSeq.cpp" />
     <ClCompile Include="src\View\ControlMatrixScene.cpp" />
     <ClCompile Include="src\View\FreeEGWidget.cpp" />
+    <ClCompile Include="src\View\FreeEG\EGPath.cpp" />
+    <ClCompile Include="src\View\FreeEG\EGRect.cpp" />
     <ClCompile Include="src\View\FreeEG\FreeEGScene.cpp" />
     <ClCompile Include="src\View\FxEq.cpp" />
     <ClCompile Include="src\View\PianoRoll\PianoKey.cpp" />
@@ -139,6 +141,8 @@
     <QtMoc Include="src\View\PianoRoll\PianoView.h" />
     <QtMoc Include="src\View\FreeEGWidget.h" />
     <QtMoc Include="src\View\FreeEG\FreeEGScene.h" />
+    <ClInclude Include="src\View\FreeEG\EGPath.h" />
+    <ClInclude Include="src\View\FreeEG\EGRect.h" />
     <ClInclude Include="src\View\PianoRoll\PianoKey.h" />
     <QtMoc Include="src\View\VoiceNameEdit.h" />
     <QtMoc Include="src\View\UiWidgets.h" />
