--- a/QMidiAn1x.vcxproj.filters
+++ b/QMidiAn1x.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="src\View\FreeEG\EGPath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="qmidi\qmidiin.h">
@@ -181,5 +184,10 @@
     <QtUic Include="src\View\FreeEGWidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="QAN1xEditor.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
