--- a/QMidiAn1x.vcxproj.filters
+++ b/QMidiAn1x.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClInclude Include="src\Model\PatchDatabase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\View\BrowserTableModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\View\SceneView.h">
