--- a/QMidiAn1x.vcxproj.filters
+++ b/QMidiAn1x.vcxproj.filters
@@ -121,6 +121,9 @@
     <ClCompile Include="src\Model\PatchDatabase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\View\BrowserTableModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Model\MidiMaster.h">
@@ -168,9 +171,6 @@
     <ClInclude Include="src\Model\PatchDatabase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\View\BrowserTableModel.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\View\SceneView.h">
@@ -216,6 +216,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="include\QMidi\qmidipianoroll.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="src\View\BrowserTableModel.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
