--- a/QMidiAn1x.vcxproj
+++ b/QMidiAn1x.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="src\Model\PatchDatabase.h" />
     <ClInclude Include="src\Model\PatchMemory.h" />
     <QtMoc Include="src\View\BrowserTableModel.h" />
+    <ClInclude Include="src\Model\PatchRow.h" />
     <ClInclude Include="src\View\FreeEG\EGPath.h" />
     <ClInclude Include="src\View\PianoRoll\PianoKey.h" />
     <QtMoc Include="src\View\VoiceNameEdit.h" />
